--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    - uses: docker/setup-buildx-action@v1
     - name: Login to GitHub
       run: |
         echo $CR_PAT | docker login ghcr.io -u au5ton --password-stdin
